# dataports

./: CHANGELOG.md  Cargo.toml  README.md
src/: any_port.rs  error.rs  lib.rs  macros.rs  port.rs  port_description.rs  port_provider.rs  port_variant.rs  remapping.rs
src/bind/: any_port_value.rs  in_out_port.rs  in_port.rs  mod.rs  out_port.rs  port_value.rs  sequence_number.rs
src/collections/: mod.rs  port_array.rs  port_list.rs  port_map.rs
src/flow/: in_out_port.rs  in_port.rs  mod.rs  out_port.rs
supply-chain/: config.toml
tests/: all.rs  concepts.rs  definition.rs  definition2.rs  description.rs  description0.rs  description1.rs  description2.rs  description_no_ports.rs  description_ports_without.rs  port_array.rs
tests/bind/: binding.rs  in_out_port.rs  in_port.rs  mod.rs  out_port.rs
tests/collections/: mod.rs  port_array.rs  port_list.rs  port_map.rs
tests/flow/: in_port.rs  mod.rs
